# KiKoDictionary

./: README.md  dudu.conf  dump_project.py
KIKODictionaryClient/: AuthManager.cpp  AuthManager.hpp  CMakeLists.txt  CaptchaClient.cpp  CaptchaClient.hpp  README.md  ServerMonitor.h  colorpalette.qrc  dump_output.txt  dump_project.py  main.cpp  paginatedresource.cpp  qtquickcontrols2.conf
KIKODictionaryClient/ColorPalette/: ColorView.qml  Main.qml  PagesModel.qml  SentenceDialogDelete.qml  SentenceDialogEditor.qml  Sentences.qml  ServerSelection.qml  UserMenu.qml
KIKODictionaryClient/QtExampleStyle/: Button.qml  CMakeLists.txt  Drawer.qml  UIStyle.qml  qmldir
KIKODictionaryClient/assets/: server.crt
KIKODictionaryClient/captcha_page/: CaptchaPage.qml
KIKODictionaryClient/common/: CaptchaComponent.qml  CaptchaImage.qml  ErrorDialog.qml  ScrollablePage.qml  SuccessDialog.qml
KIKODictionaryClient/health_page/: ServicesHealthPage.qml
KIKODictionaryClient/login_page/: LoginComponent.qml  LoginDialog.qml  LoginRegisterDialog.qml  LoginTestPage.qml
KIKODictionaryClient/register_page/: RegisterPage.qml
KIKODictionaryClient/test/: ApiClient.cpp  ApiClient.h  TestApiClientPage.qml
KIKODictionaryServer/: CMakeLists.txt  apibehavior.h  colorpalette.pro  main.cpp  types.h  utils.h
KIKODictionaryServer/assets/: colors.json  sentences.json  sessions.json  users.json
KIKOFastapiServer/: Procfile  data.json  dev_kill_all_services_for_develop.sh  install_maia_systemd_microservices.sh  main.py  prod_install_maia_systemd_microservices.sh  prod_update_maia_microservices.sh  update_maia_microservices.sh  users.json
KIKOFastapiServer/auth-microservice/: .env.example  README.md  dump_output.txt  dump_project.py  pyproject.toml
KIKOFastapiServer/auth-microservice/migrations/: env.py
KIKOFastapiServer/auth-microservice/migrations/versions/: 21befe77be08_add_soft_delete_to_user.py  24f4d8d8ec85_add_onboarding_flag_to_user_profiles.py  (+3 more)
KIKOFastapiServer/auth-microservice/src/: dependencies.py  main.py
KIKOFastapiServer/auth-microservice/systemd_files/: install_systemd_service.sh  maia-auth.service
KIKOFastapiServer/auth-microservice/tests/: test_main.py
KIKOFastapiServer/captcha-microservice/: .gitignore  Dockerfile  README.md  captcha.db  docker-compose.yml  dump_project.py  requirements.txt
KIKOFastapiServer/captcha-microservice/qt_test_captcha/: CMakeLists.txt  captchaclient.cpp  main.cpp
KIKOFastapiServer/captcha-microservice/src/: dependencies.py  main.py
KIKOFastapiServer/captcha-microservice/systemd_files/: install_systemd_service.sh  maia-captcha.service
KIKOFastapiServer/captcha-microservice/tests/: test_captcha.py
KIKOFastapiServer/my-users-microservice/: README.md  alembic.ini  dump_output.txt  dump_project.py  pyproject.toml  pytest.ini  test.db  users.db
KIKOFastapiServer/my-users-microservice/migrations/: env.py
KIKOFastapiServer/my-users-microservice/src/: dependencies.py  main.py
KIKOFastapiServer/my-users-microservice/src/api/v1/routers/: auth.py  health.py
KIKOFastapiServer/my-users-microservice/src/api/v1/schemas/: user.py
KIKOFastapiServer/my-users-microservice/src/core/: config.py  security.py
KIKOFastapiServer/my-users-microservice/src/db/models/: refresh_token.py  user.py
KIKOFastapiServer/my-users-microservice/src/db/repository/: user_repository.py
KIKOFastapiServer/my-users-microservice/tests/: conftest.py  test_main.py
KIKOFastapiServer/sentences-microservice/: .gitignore  README.md  alembic.ini  database.py  dependencies.py  dump_output.txt  dump_project.py  main.py  requirements.txt  sentences.db
KIKOFastapiServer/sentences-microservice/crud/: sentence.py
KIKOFastapiServer/sentences-microservice/migrations/: env.py
KIKOFastapiServer/sentences-microservice/models/: sentence.py
KIKOFastapiServer/sentences-microservice/routers/: sentence.py
KIKOFastapiServer/sentences-microservice/schemas/: sentence.py
KIKOFastapiServer/sentences-microservice/systemd_files/: install_systemd_service.sh  maia-sentences.service
KIKOFastapiServer/test_microservices_qt_apps/qt_test_captcha/: CMakeLists.txt  ServerMonitor.cpp  captchaclient.h  main.cpp
KIKOFastapiServer/test_microservices_qt_apps/qt_test_captcha/auth_service/: AuthManager.cpp  AuthManager.hpp
KIKOFastapiServer/test_microservices_qt_apps/qt_test_captcha/qml/: main.qml
KIKOFastapiServer/test_microservices_qt_apps/qt_test_captcha/qml/auth_service/: AuthLoginPage.qml  AuthPage.qml  AuthRegisterPage.qml
KIKOFastapiServer/test_microservices_qt_apps/qt_test_captcha/qml/health_page/: ServicesHealthPage.qml
KIKOFastapiServer/test_microservices_qt_apps/qt_test_users_microservice/test-users-microservice/: CMakeLists.txt  main.cpp  userserviceclient.cpp  userserviceclient.h
KIKOFastapiServer/test_microservices_qt_apps/qt_test_users_microservice/test-users-microservice/qml/: main.qml
KIKOFastapiServer/users-microservice/: .env.example  README.md  pyproject.toml  test.db  users.db
KIKOFastapiServer/users-microservice/src/: dependencies.py  main.py
KIKOFastapiServer/users-microservice/src/api/v1/endpoints/: auth.py  users.py
KIKOFastapiServer/users-microservice/src/api/v1/routers/: test.py
KIKOFastapiServer/users-microservice/src/api/v1/schemas/: health.py  token.py  user.py
KIKOFastapiServer/users-microservice/src/core/: config.py  security.py
KIKOFastapiServer/users-microservice/src/db/: session.py
KIKOFastapiServer/users-microservice/src/db/models/: user.py
KIKOFastapiServer/users-microservice/src/db/repository/: refresh_token_repository.py  user_repository.py
KIKOFastapiServer/users-microservice/src/services/: captcha_service.py
KIKOFastapiServer/users-microservice/systemd_files/: install_systemd_service.sh  maia-users.service
KIKOFastapiServer/users-microservice/tests/: conftest.py  test_auth_api.py
client/MaiaFlutterClient/maia_flutter_client/: pubspec.yaml
client/maia_flutter_client/: README.md  _dump_output.txt  dump_output.txt  dump_project.py  pubspec.yaml
client/maia_flutter_client/lib/: app.dart  main.dart  main_smart_home.dart
(+124 files in other folders)
